# kicad-lib-parse

./: .pre-commit-config.yaml  README.md  pyproject.toml
examples/: create_footprint.py
src/: __init__.py  io.py  main.py  models.py
test/: __init__.py  test_footprint.py  test_image.py  test_page_settings.py  test_points.py  test_polygon.py  test_position_identifier.py  test_property.py  test_stroke.py  test_text_effects.py  test_uuid.py
test/samples/: .gitignore  0603.kicad_mod  pts.sexp  stroke.sexp  stroke_full.sexp
